kubernetes/command_demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: command-demo-container
    image: nginx
    command: ["printenv"]
    args: ["HOSTNAME", "KUBERNETES_PORT", "MESSAGE1", "MESSAGE2"]
