kubernetes/command_demo2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo2
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: command-demo-container
    image: bash
    command: ["echo"]
    args: ["$(MESSAGE1)  $(MESSAGE2)"]
