kubernetes/config_map_demo2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo
  labels:
    purpose: demonstrate-configmap
spec:
  containers:
  - name: command-demo-container
    image: nginx
