kubernetes/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-green
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-app-green
    spec:
      containers:
      - name: mynginx-con
        image: httpd
        ports:
        - containerPort: 80
