kubernetes/pod_with_volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: /mydata  # logical
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      path: /data  # physical
      type: DirectoryOrCreate
