kubernetes/green_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-app-green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
