kubernetes/myimage_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  type: LoadBalancer
  selector:
    #app: nginx-app
    app: mynginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
