kubernetes/mysql_with_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-ss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mysql-pod"
  template:
    metadata:
      labels:
        app: "mysql-pod"
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-volume-claim
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-volume-claim
        persistentVolumeClaim:
          claimName: mysql-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  ports:
  - port: 3306
  selector:
    app: "mysql-pod"
