kubernetes/stateful_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-readonly
  labels:
    app: mysql
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
